<?xml version="1.0"?>
<package>
    <name>robotiq_ros_pkg</name>
    <version>0.0.1</version>
    <description>ROS package for robotiq two finger gripper.</description>
    
    <maintainer email="srinjoy.majumdar@utexas.edu">Srinjoy Majumdar</maintainer>
    <author>Srinjoy Majumdar</author>
    <url type="repository">https://github.com/#</url>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <!-- Packages needed to build and run-->
    <!--build_depend>dynamic_reconfigure</build_depend>
    <run_depend>dynamic_reconfigure</run_depend-->
    
    <!-- Packages needed to run but not to build-->
    <!--run_depend>vector_msgs</run_depend-->
    <run_depend>rospy</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>move_base</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>move_base_msgs</run_depend>
    <run_depend>interactive_markers</run_depend>
    <run_depend>visualization_msgs</run_depend>
    <run_depend>wpi_jaco_msgs</run_depend>
    
	<export>
	</export>
</package>
